--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 @charset "utf-8"
-body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
+body {
+    margin:0 ;
+    padding: 0 ;
+}
 
 
-/* ウィンドウサイズが480px以上のときはここを読み込む */
 
-@media screen and (min-width:200px){
+/*  全環境に共通の設定（モバイルファースト） */
+
+    /*  地図について */
 
     #map{
         position: absolute;
@@ -68,144 +72,173 @@ body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
     }
 
 
-    #reset {
-        display: inline-block;
-        width: 100px;
-        height: 30px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
+    /* 設定パネルについて */
+
+    .EditPanel_PC {
+        display: none;
     }
-	 
-}
 
 
+    /*  ドロワーメニューについて */
 
-/* ウィンドウサイズが480px以上1024px以下のときはここを読み込む */
+    .wrapper {
+        height: 100%;
+        width: 100%;
+        overflow-x: hidden;
+        position: relative;
+    }
 
-@media screen and (min-width:768px) and (max-width:1024px){
-
-    #map{
+    .overlay {
+        content: "";
+        display: block;
+        width: 0;
+        height: 0;
+        background-color: rgba(0, 0, 0, 0.5);
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 2;
+        opacity: 0;
+        transition: opacity .5s;
+    }
+
+    .overlay.open {
         width: 100%;
         height: 100%;
+        opacity: 1;
     }
 
-    .map-overlay {
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        position: absolute;
-        width: 200px;
-        top: 0;
-        left: 0;
-        padding: 10px;
-    }
-        
-    .map-overlay .map-overlay-inner {
-        background-color: #fff;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        border-radius: 3px;
-        padding: 10px;
-        margin-bottom: 10px;
-    }
-        
-    .map-overlay-inner fieldset {
-        border: none;
-        padding: 0;
-        margin: 0 0 10px;
-    }
-        
-    .map-overlay-inner fieldset:last-child {
-        margin: 0;
-    }
-        
-    .map-overlay-inner select {
-        width: 100%;
-    }
-        
-    .map-overlay-inner label {
-        display: block;
-        font-weight: bold;
-        margin: 0 0 5px;
-    }
-        
-    .map-overlay-inner button {
+    .menu-trigger {
         display: inline-block;
         width: 36px;
-        height: 20px;
-        border: none;
+        height: 28px;
+        vertical-align: middle;
         cursor: pointer;
-    }
-        
-    .map-overlay-inner button:focus {
-    outline: none;
-        }
-        
-    .map-overlay-inner button:hover {
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        z-index: 100;
+        transform: translateX(0);
+        transition: transform .5s;
     }
 
+    .menu-trigger.active {
+        transform: translateX(-250px);
+    }
 
-    #reset {
+    .menu-trigger span {
         display: inline-block;
-        width: 100px;
-        height: 30px;
-        border: none;
-        cursor: pointer;
-        outline: none;
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: rgb(255, 255, 255);
     }
-	 
-}
 
+    .menu-trigger.active span {
+        background-color: #fff;
+    }
 
+    .menu-trigger span:nth-of-type(1) {
+        top: 0;
+    }
 
-/* ウィンドウサイズが1024px以上のときはここを読み込む */
+    .menu-trigger.active span:nth-of-type(1) {
+        transform: translateY(12px) rotate(-45deg);
+    }
 
-@media screen and (min-width:1024px){
+    .menu-trigger span:nth-of-type(2) {
+        top: 12px;
+    }
 
-    /* 画面右側の設定パネルについて */
+    .menu-trigger.active span:nth-of-type(2) {
+        opacity: 0;
+    }
+
+    .menu-trigger span:nth-of-type(3) {
+        bottom: 0;
+    }
+
+    .menu-trigger.active span:nth-of-type(3) {
+        transform: translateY(-12px) rotate(45deg);
+    }
     
-    .main .EditPanel1_PC {
-        position: absolute;
-        top: 100px;
-        right: 150px;
+    nav {
+        width: 250px;
+        height: 100%;
+        padding-top: 100px;
+        background-color: rgb(16, 69, 153, 0.8);
+        position: fixed;
+        top: 0;
+        right: 0;
+        z-index: 10;
+        transform: translate(250px);
+        transition: all .5s;
     }
 
-    /* トグルスイッチについて */
+    nav.open {
+        transform: translateZ(0);
+    }
+    
+    nav li {
+        color: #fff;
+        text-align: center;
+        padding: 10px 0;
+    }
+    
+    * {
+        box-sizing: border-box;
+    }
 
-    .EditPanel1_PC h3 {
+    ul {
+        list-style: none;
+    }
+
+
+
+
+    /* スライドメニュー内の設定パネルについて */
+    
+    .EditPanel_SP {
+        position: absolute;
+    }
+
+    /* スライドメニュー内のトグルスイッチについて */
+
+    .EditPanel_SP h3 {
+        font-family: 'M PLUS Rounded 1c', sans-serif;
         font-size: 1.5rem;
         border-bottom: 7px double #ccc;
         text-align: center;
         margin: 2rem auto;
+        color: white;
     }
 
-    .EditPanel1_PC .item-frame {
+    .EditPanel_SP .item-frame {
         margin: 1rem auto;
     }
 
-    .EditPanel1_PC .text {
+    .EditPanel_SP .text {
         vertical-align: middle;
     }
 
-    .EditPanel1_PC label {
+    .EditPanel_SP label {
         cursor: pointer;
+        color: white;
     }
 
-    .EditPanel1_PC .switch {
+    .EditPanel_SP .switch {
         position: relative;
     }
 
-    .EditPanel1_PC .switch:before, .EditPanel1_PC .switch:after {
+    .EditPanel_SP .switch:before, .EditPanel_SP .switch:after {
         content: '';
         vertical-align: middle;
         display: inline-block;
     }
     
-    .EditPanel1_PC .switch:before {
+    .EditPanel_SP .switch:before {
         width: 2em;
         height: 1em;
         border: 2px solid #C4C9FF;
@@ -213,7 +246,7 @@ body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
         background: #999;
     }
 
-    .EditPanel1_PC .switch:after {
+    .EditPanel_SP .switch:after {
         position: relative;
         width: 1em;
         height: 1em;
@@ -222,33 +255,187 @@ body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
         left: -2.2em;
     }
 
-    .EditPanel1_PC input { 
+    .EditPanel_SP input { 
         display: none;
     }
 
-    .EditPanel1_PC input:checked ~ .switch:before {
+    .EditPanel_SP input:checked ~ .switch:before {
         background: #00b715;
         border-color: #84ff92;
     }
       
-    .EditPanel1_PC input:checked ~ .switch:after {
+    .EditPanel_SP input:checked ~ .switch:after {
         background: #84ff92;
         left: -1.1em;
     }
 
 
-    /* 画面右側の設定パネルについて */
-    
-    .main .EditPanel2_PC {
+    /* スライダーについて */
+
+    .EditPanel_SP .Label-Size-Slider {
+        -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+        appearance: none;
+        cursor: pointer; /* カーソルを分かりやすく */
+        outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+        height: 14px; /* バーの高さ */
+        width: 100%; /* バーの幅 */
+        background: #8acdff; /* バーの背景色 */
+        border-radius: 10px; /* バーの両端の丸み */
+        border: solid 3px #dff1ff; /* バー周囲の線 */
+    }
+
+}
+
+
+    /*  フロート時の回り込み防止のための記述 */
+
+    .clearfix::after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+
+
+/* タブレット用、ウィンドウサイズが600px以上のときはここを読み込む */
+
+@media screen and (min-width:480px){
+
+/* 現状はパソコン版のやつコピペしただけ */
+
+    main{
+        width: 1050px;
+        height: 550px;
+        margin: 0 auto;
+    }
+
+
+
+    /* 地図について */
+
+    .ShadowBox {
+        position: relative;
+        width: 70%;
+        height: auto;
+        float: left;
+
+    }
+
+    .ShadowBox::before {
+        content: "";
+        display: block;
+        padding-top: 75%;
+    }
+
+    .ShadowBox #map {
         position: absolute;
-        bottom: 100px;
-        right: 150px;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+    }
+
+
+    
+    /* パソコン版画面右側の設定パネルについて */
+    /* パソコン版でだけEditPanel1表示 */
+
+
+    #EditPanel_PC {
+        display: block;
+        width: 300px;
+        height: 550px;
+        padding: 10px;
+        float: right;
+    }
+
+    /* トグルスイッチについて */
+
+    .EditPanel1 h3 {
+      font-size: 1.5rem;
+      border-bottom: 7px double #ccc;
+      text-align: center;
+      margin: 2rem auto;
+    }
+  
+    .EditPanel1 .item-frame {
+      margin: 1rem auto;
+    }
+  
+    .EditPanel1 .text {
+      vertical-align: middle;
+    }
+  
+    // カーソルをポインタに
+    .EditPanel1 label {
+      cursor: pointer;
+    }
+  
+    .EditPanel1 .switch {
+      position: relative;
+    }
+  
+    .EditPanel1 .switch:before, .EditPanel1 .switch:after {
+      content: "";
+      vertical-align: middle;
+      display: inline-block;
+    }
+  
+    .EditPanel1 .switch:before {
+      width: 2em;
+      height: 1em;
+      border: 2px solid #c4c9ff;
+      border-radius: 32px;
+      background: #999;
+    }
+  
+    .EditPanel1 .switch:after {
+        position: relative;
+        width: 1em;
+        height: 1em;
+        background: #c4c9ff;
+        border-radius: 50%;
+        left: -2.2em;
+    }
+  
+    .EditPanel1 input { 
+      display: none;
+    }
+  
+    .EditPanel1 input:checked ~ .switch:before {
+      background: #00b715;
+      border-color: #84ff92;
+    }
+    
+    .EditPanel1 input:checked ~ .switch:after {
+      background: #84ff92;
+      left: -1.1em;
     }
 
 
     /* スライダーについて */
 
-    .main .EditPanel2_PC .Label-Size-Slider {
+    .EditPanel2 {
+        display: block;
+        padding: 10px;
+    }
+
+    .EditPanel2 h3 {
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+        font-size: 1.5rem;
+        border-bottom: 7px double #ccc;
+        text-align: center;
+        margin: 2rem auto;
+    }
+
+    .EditPanel2 .text {
+        vertical-align: middle;
+    }
+    
+    .EditPanel2 label {
+        cursor: pointer;
+    }
+
+    .EditPanel2 .Label-Size-Slider {
         -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
         appearance: none;
         cursor: pointer; /* カーソルを分かりやすく */
@@ -261,75 +448,155 @@ body { margin:0; padding:0; font-family: 'M PLUS Rounded 1c', sans-serif;}
     }
 
 
+
+/* PC用、ウィンドウサイズが1024px以上のときはここを読み込む */
+
+@media screen and (min-width:1024px){
+
+
+    main{
+        width: 1050px;
+        height: 550px;
+        margin: 0 auto;
+    }
+
+
+
     /* 地図について */
 
-    #map{
-        position: absolute;
-        top: 100px;
-        left: 100px;
-        width: 60%;
-        height: 80%;
+    .ShadowBox {
+        position: relative;
+        width: 70%;
+        height: auto;
+        float: left;
+
     }
 
-    .map-overlay {
-        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-        position: absolute;
-        width: 200px;
-        top: 0;
-        left: 0;
-        padding: 10px;
-    }
-        
-    .map-overlay .map-overlay-inner {
-        background-color: #fff;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        border-radius: 3px;
-        padding: 10px;
-        margin-bottom: 10px;
-    }
-        
-    .map-overlay-inner fieldset {
-        border: none;
-        padding: 0;
-        margin: 0 0 10px;
-    }
-        
-    .map-overlay-inner fieldset:last-child {
-        margin: 0;
-    }
-        
-    .map-overlay-inner select {
-        width: 100%;
-    }
-        
-    .map-overlay-inner label {
+    .ShadowBox::before {
+        content: "";
         display: block;
-        font-weight: bold;
-        margin: 0 0 5px;
+        padding-top: 75%;
     }
-        
-    .map-overlay-inner button {
-        display: inline-block;
-        width: 36px;
-        height: 20px;
-        border: none;
+
+    .ShadowBox #map {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+    }
+
+
+    
+    /* パソコン版画面右側の設定パネルについて */
+    /* パソコン版でだけEditPanel1表示 */
+
+
+    #EditPanel_PC {
+        display: block;
+        width: 300px;
+        height: 550px;
+        padding: 10px;
+        float: right;
+    }
+
+    /* トグルスイッチについて */
+
+    .EditPanel1 h3 {
+      font-size: 1.5rem;
+      border-bottom: 7px double #ccc;
+      text-align: center;
+      margin: 0.5rem auto;
+    }
+  
+    .EditPanel1 .item-frame {
+      margin: 0.5rem auto;
+    }
+  
+    .EditPanel1 .text {
+      vertical-align: middle;
+    }
+  
+    .EditPanel1 label {
+      cursor: pointer;
+    }
+  
+    .EditPanel1 .switch {
+      position: relative;
+    }
+  
+    .EditPanel1 .switch:before, .EditPanel1 .switch:after {
+      content: "";
+      vertical-align: middle;
+      display: inline-block;
+    }
+  
+    .EditPanel1 .switch:before {
+      width: 2em;
+      height: 1em;
+      border: 2px solid #c4c9ff;
+      border-radius: 32px;
+      background: #999;
+    }
+  
+    .EditPanel1 .switch:after {
+        position: relative;
+        width: 1em;
+        height: 1em;
+        background: #c4c9ff;
+        border-radius: 50%;
+        left: -2.2em;
+    }
+  
+    .EditPanel1 input { 
+      display: none;
+    }
+  
+    .EditPanel1 input:checked ~ .switch:before {
+      background: #00b715;
+      border-color: #84ff92;
+    }
+    
+    .EditPanel1 input:checked ~ .switch:after {
+      background: #84ff92;
+      left: -1.1em;
+    }
+
+
+    /* スライダーについて */
+
+    .EditPanel2 {
+        display: block;
+        padding: 10px;
+    }
+
+    .EditPanel2 h3 {
+        font-family: 'M PLUS Rounded 1c', sans-serif;
+        font-size: 1.5rem;
+        border-bottom: 7px double #ccc;
+        text-align: center;
+        margin: 0.5rem auto;
+    }
+
+    .EditPanel2 .text {
+        vertical-align: middle;
+    }
+    
+    .EditPanel2 label {
         cursor: pointer;
     }
-        
-    .map-overlay-inner button:focus {
-        outline: none;
+
+    .EditPanel2 .Label-Size-Slider {
+        -webkit-appearance: none; /* 🚩これ無しだとスタイルがほぼ全く反映されないので注意 */
+        appearance: none;
+        cursor: pointer; /* カーソルを分かりやすく */
+        outline: none; /* スライダーのアウトラインは見た目がキツイので消す */
+        height: 14px; /* バーの高さ */
+        width: 100%; /* バーの幅 */
+        background: #8acdff; /* バーの背景色 */
+        border-radius: 10px; /* バーの両端の丸み */
+        border: solid 3px #dff1ff; /* バー周囲の線 */
     }
-        
-    .map-overlay-inner button:hover {
-        box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
-    }
-
-
-
-
-
-
-
 
 
 
