--- a/css/style_responsible.css
+++ b/css/style_responsible.css
@@ -411,29 +411,26 @@ body {
 
 
     main{
-        width: 1050px;
-        height: 550px;
-        margin: 0 auto;
+      width: 1050px;
+      height: 550px;
+      margin: 0 auto;
     }
-
-
 
     /* 地図について */
-    .ShadowBox {
-        position: relative;
-        width: 70%;
-        height: auto;
-        float: left;
-
+    .ShadowBox1 {
+      position: relative;
+      width: 45%;
+      height: auto;
+      float: left;
     }
 
-    .ShadowBox::before {
-        content: "";
-        display: block;
-        padding-top: 75%;
+    .ShadowBox1::before {
+      content: "";
+      display: block;
+      padding-top: 75%;
     }
 
-    .ShadowBox #map {
+    .ShadowBox1 #map {
         position: absolute;
         top: 0px;
         left: 0px;
@@ -442,15 +439,36 @@ body {
     }
 
 
-    
+    /* ナビゲーションについて */
+    .ShadowBox2 {
+      position: relative;
+      width: 30%;
+      height: auto;
+      padding: 10px;
+      float: left;
+    }
+
+    .ShadowBox2::before {
+      content: "";
+      display: block;
+      padding-top: 40%;
+    }
+
+    .ShadowBox2 #Navigation {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+    }
+
     /* パソコン版画面右側の設定パネルについて */
     /* パソコン版でだけEditPanel1表示 */
     #EditPanel_PC {
-        display: block;
-        width: 300px;
-        height: 550px;
-        padding: 10px;
-        float: right;
+      display: block;
+      width: 240px;
+      height: 480px;
+      padding: 10px;
     }
 
     /* トグルスイッチについて */
